--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"> 
     <link rel="stylesheet" href="styles.css">
-    <title>Template</title>
+    <title>Picture in Picture</title>
 </head>
 <body>
+    <!-- Video -->
+    <video id="video" controls height="360px" width="640px" hidden></video>
+    <!-- Button -->
+    <div class="button-container">
+        <button id="button">
+            START
+        </button>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
